[package]
name = "warp_migration"
version = "0.1.0"
authors = ["kumarmo2 <mohitkumar1015795@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2" , features = [ "macros"]}
warp = "0.2.2"
serde = { version = "1.0.110", features = ["derive"] }
validator = "0.10.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
