[package]
name = "warp_migration"
version = "0.1.0"
authors = ["kumarmo2 <mohitkumar1015795@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2" , features = [ "macros"]}
warp = "0.2.2"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
validator = "0.10.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
futures = "0.3.5"
bcrypt = "0.7.0"
cookie = "0.13.3"
jsonwebtoken = "5.0.1"
